# RTF_TEAM

./: .env.example  .gitignore  Dockerfile  README.md  api_start.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0d9b8f72eca6_add_project_model.py  2c87ad2f11a0_change_title_project.py  370cef84b5f0_add_session.py  58cbe5d08982_rename_fields.py  6762b805326a_add_iteration_number_into_session.py  6845c679cc2a_add_all_models.py  726a88ebb731_update_agent_sessions_for_new_contract.py  79cc2da5ab3d_fix_agent_session_one_to_one_to_.py  7a8b9c0d1e2f_add_context_questions.py  8ca53889808e_add_parent_message_id.py  904a00d569a7_add_user_goal_field.py  ab38a3730f08_add_interviews_and_requirements.py  c621d287ceb3_add_requirements.py  c6a24dbf116f_add_interview_files_and_external_id.py  dadab12fc20e_add_user_model.py  ddf6a61ab097_del_field_iteration_number_in_agent_.py  eae3d1ed4701_add_is_skipped.py
app/: main.py
app/api/: agent.py  auth.py  interviews.py  projects.py  requirements.py  user.py  users.py
app/core/: __init__.py  config.py  database.py  security.py
app/cruds/: __init__.py  agent_session.py  base.py  interview.py  interview_file.py  project.py  project_file.py  refresh_token.py  user.py
app/dependencies/: __init__.py  agent.py  current_user.py  file.py
app/exceptions/: __init__.py  custom.py
app/models/: __init__.py  agent.py  enum.py  interview.py  project.py  refresh_token.py  requirement.py  session.py  user.py
app/schemas/: __init__.py  auth.py  error.py  interview.py  project.py  requirements.py  session.py  user.py
(+6 files in other folders)
